--- a/Tarea2/Servidor-Web/src/main/webapp/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./recourse/css/index.css">
+    <link rel="stylesheet" href="./recourse/css/general.css">
     <title>Trabajo.uy</title>
 </head>
 
@@ -25,7 +25,7 @@
             <button class="btn btn-secondary">Buscar</button>
         </div>
         <div class="header-right">
-            <a href="../menu/miPerfilEmpresa.html">Perfil</a>
+            <a href="../recourse/menu/miPerfilEmpresa.html">Perfil</a>
         </div>
 
     </header>
@@ -37,15 +37,17 @@
                     <h4> Menu </h4>
                     <button type="button" class="dropbtn" id="dropdown-button">Seleccionar Pagina </button>
                     <div class="dropdown-content">
-                        <a class="opcionDropMenu" href="../menu/compraPaquete.html" id="compraPaquete">Comprar
+                        <a class="opcionDropMenu" href="../recourse/menu/compraPaquete.html" id="compraPaquete">Comprar
                             Paquete</a>
-                        <a class="opcionDropMenu" href="../menu/consultaUsuario.html" id="consultaUsuario">Consultar
+                        <a class="opcionDropMenu" href="../recourse/menu/consultaUsuario.html"
+                            id="consultaUsuario">Consultar
                             Usuario</a>
-                        <a class="opcionDropMenu" href="../menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        <a class="opcionDropMenu"
+                            href="../recourse/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
                             id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
                             publicacion</a>
                         <a class="opcionDropMenu"
-                            href="../menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
+                            href="../recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
                             id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a>
                     </div>
                 </div>
@@ -97,53 +99,59 @@
         </div>
         <section class="ofertaslaborales">
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg"
+                    alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor eveniet fugit sit eaque magni
                     enim a
                     explicabo voluptate doloremque, similique inventore placeat accusantium maiores autem ipsam iste
                     voluptas facilis repellendus?
                     <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg"
+                    alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg"
+                    alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg"
+                    alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg"
+                    alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg"
+                    alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
         </section>
@@ -159,7 +167,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
         </script>
-    <script src="./js/dejarOpcionMarcada.js"></script>
+    <script src="./recourse/js/dejarOpcionMarcada.js"></script>
 </body>
 
 </html>
