--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html
@@ -15,7 +15,7 @@
     <header>
 
         <div class="header-left">
-            <a href="../index.html">
+            <a href="/index.html">
                 <aside class="logo">Trabajo<span>.uy</span></aside>
             </a>
         </div>
@@ -158,9 +158,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
         </script>
-    <script src="../js/dejarOpcionMarcada.js"></script>
-    <script src="../js/seleccionConsultaTipoDePaquete.js"></script>
-    <script src="../js/consultaTipoPaqueteVerDropdownDeOfertas.js"></script>
+    <script src="../js/paqueteTipoPublicacion/consultaTipoPaqueteVerDropdownDeOfertas.js"></script>
+    <script src="../js/paqueteTipoPublicacion/dejarOpcionMarcada.js"></script>
+    <script src="../js/paqueteTipoPublicacion/seleccionConsultaTipoDePaquete.js"></script>
 </body>
 
 </html>
