--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -7,15 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/consultaDeTiposDePublicacionDeOfertaLaboral.css">
+    <link rel="stylesheet" href="../css/general.css">
     <title>Trabajo.uy</title>
 </head>
 
 <body>
-    <!-- El cuerpo del body por lo general esta compuesto de tres etiquetas: header(portada), main, footer(pie de página, dónde por lo general van los contactos, redes sociales, etc)-->
     <header>
 
         <div class="header-left">
-            <a href="../index.html">
+            <a href="/index.html">
                 <aside class="logo">Trabajo<span>.uy</span></aside>
             </a>
         </div>
@@ -30,20 +30,21 @@
     </header>
 
     <main class="home">
-        <!-- El cuerpo main del home va a contener dos secciones(section). A la izquierda una tabla(table) con las keywords. Y a la derecha varios contenedores(div) uno debajo del otro que contienen la imagen(img) y descripción(p) de las ofertas laborales.
-        El cuerpo de la tabla(tbody) contiene botones para que después al hacer click filtre por lo que corresponda -->
         <div class="mainLeft">
             <section class="menu">
                 <div class="dropdown">
                     <h4> Menu </h4>
                     <button type="button" class="dropbtn" id="dropdown-button">Seleccionar Pagina </button>
                     <div class="dropdown-content">
-                        <a href="../menu/compraPaquete.html" id="compraPaquete">Comprar Paquete</a>
-                        <a href="../menu/consultaUsuario.html" id="consultaUsuario">Consultar Usuario</a>
-                        <a href="../menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        <a class="opcionDropMenu" href="../menu/compraPaquete.html" id="compraPaquete">Comprar
+                            Paquete</a>
+                        <a class="opcionDropMenu" href="../menu/consultaUsuario.html" id="consultaUsuario">Consultar
+                            Usuario</a>
+                        <a class="opcionDropMenu" href="../menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
                             id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
                             publicacion</a>
-                        <a href="../menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
+                        <a class="opcionDropMenu"
+                            href="../menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
                             id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a>
                     </div>
                 </div>
@@ -93,62 +94,53 @@
                 </div>
             </section>
         </div>
-        <section class="ofertaslaborales">
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor eveniet fugit sit eaque magni
-                    enim a
-                    explicabo voluptate doloremque, similique inventore placeat accusantium maiores autem ipsam iste
-                    voluptas facilis repellendus?
-                    <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
+        <div class="mainCenter">
+
+            <section class="paquetesConsulta">
+                <div class="espacio3">
+
+                </div>
+                <div class="dropdownConsulta">
+                    <h5> Paquetes Registrados </h4>
+                        <button type="button" class="dropbtnConsulta" id="dropdownConsulta-button">Seleccione un tipo de
+                            publicacion
+                        </button>
+                        <div class="dropdownConsulta-content">
+                            <a class="opcionConsulta" href="#">Bronce</a>
+                            <a class="opcionConsulta" href="#">Plata</a>
+                            <a class="opcionConsulta" href="#">Oro</a>
+                            <a class="opcionConsulta" href="#">Platino</a>
+                            <a class="opcionConsulta" href="#">Diamante</a>
+                        </div>
+                </div>
+
+                <div class="espacio">
+
+                </div>
+                <div class="infoTipoPublicacio">
+                    <div class="tituloDetallePublicacion">
+                        <h5> Detalles del tipo de publicacion</h5>
+                    </div>
+                    <div class="espacio2"></div>
+                    <p class="publicacionDetalles"><strong>Tipo:</strong> Premium</p>
+                    <p class="publicacionDetalles"><strong>Descripción:</strong>
+                        Excelente para empresas con gran
+                        actividad de marketing.
+                    </p>
+                    <p class="publicacionDetalles"><strong>Exposicion:</strong> 23</p>
+                    <p class="publicacionDetalles"><strong>Duracion:</strong> 30</p>
+                    <p class="publicacionDetalles"><strong>Costo:</strong> $<span id="costo">99.99</span></p>
+                </div>
+        </div>
+        </div>
         </section>
+        </div>
+        <div class="mainRight">
+
+        </div>
     </main>
 
     <footer>
-
     </footer>
 
 
@@ -157,7 +149,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
         </script>
-    <script src="../paginaWeb/js/dejarOpcionMarcada.js"></script>
+    <script src="../js/dejarOpcionMarcada.js"> </script>
+    <script src="../js/tipoPublicacion/seleccionConsultaTipoDePaquete.js"></script>
 </body>
 
 </html>
