--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaUsuario.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/consultaUsuario.css">
+    <link rel="stylesheet" href="../css/general.css">
     <title>Trabajo.uy</title>
 </head>
 
@@ -15,7 +16,7 @@
     <header>
 
         <div class="header-left">
-            <a href="../index.html">
+            <a href="/index.html">
                 <aside class="logo">Trabajo<span>.uy</span></aside>
             </a>
         </div>
@@ -35,9 +36,20 @@
         <div class="mainLeft">
             <section class="menu">
                 <div class="dropdown">
-                    <h4> Menu </h4>
+                    <h4><strong>Menu</strong></h4>
                     <button class="dropbtn" id="dropdown-button">No hay opciones</button>
-
+                    <div class="dropdown-content">
+                        <a class="opcionDropMenu" href="../menu/compraPaquete.html" id="compraPaquete">Comprar
+                            Paquete</a>
+                        <a class="opcionDropMenu" href="../menu/consultaUsuario.html" id="consultaUsuario">Consultar
+                            Usuario</a>
+                        <a class="opcionDropMenu" href="../menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                            id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
+                            publicacion</a>
+                        <a class="opcionDropMenu"
+                            href="../menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
+                            id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a>
+                    </div>
                 </div>
             </section>
 
@@ -85,58 +97,110 @@
                 </div>
             </section>
         </div>
-        <section class="ofertaslaborales">
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor eveniet fugit sit eaque magni
-                    enim a
-                    explicabo voluptate doloremque, similique inventore placeat accusantium maiores autem ipsam iste
-                    voluptas facilis repellendus?
-                    <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
+        <section class="consultaUsuario">
+            <div class="envolver">
+                <div class="espacio3">
+
+                </div>
+                <div class="dropdownConsultaUsuario">
+                    <h5><strong>Usuarios Registrados</strong></h4>
+                        <button type="button" class="dropbtnConsultaUsuario"
+                            id="dropdownConsultaUsuario-button">Seleccione
+                            un
+                            usuario
+                        </button>
+                        <div class="dropdownConsultaUsuario-content">
+                            <a class="opcionConsultaUsuario" href="#">Benjamin</a>
+                            <a class="opcionConsultaUsuario" href="#">Daniel</a>
+                            <a class="opcionConsultaUsuario" href="#">Kevin</a>
+                            <a class="opcionConsultaUsuario" href="#">EcoTech</a>
+                            <a class="opcionConsultaUsuario" href="#">Valentin</a>
+                            <a class="opcionConsultaUsuario" href="#">Cristhina</a>
+                        </div>
+                </div>
+                <div class="espacio">
+
+                </div>
+                <div class="infoUsuario" id="infoUsuario">
+                    <section class="usuarioDatos">
+                        <div class="tituloDetallePaquete">
+                            <h5><strong>Detalles del paquete</strong></h5>
+                        </div>
+
+                        <p class="usuarioDatosViewIMG"><img clas="imgUsuarioDatosView" src="../img/perfil.jpeg"
+                                alt="Imagen del Producto" width="150"></p>
+                        <p class="usuarioDatosView"><strong>Nickname:</strong> kevinpenarol23</p>
+                        <p class="usuarioDatosView"><strong>Nombre:</strong> Kevin</p>
+                        <p class="usuarioDatosView"><strong>Apellido:</strong>Perez</p>
+                        <p class="usuarioDatosView"><strong>Email:</strong> kevinpenarol23@gmail.com</p>
+                        <p class="usuarioDatosView"><strong>Contrasena:</strong> 123456</p>
+                        <p class="usuarioDatosView"><strong>Feha Nacimiento:</strong> 23/06/1993</p>
+                        <p class="usuarioDatosView"><strong>Nacionalidad:</strong> Paraguayo</p>
+                    </section>
+                </div>
             </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
-            </div>
-            <div class="oferta oferta1">
-                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
-                    recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
-                    perspiciatis autem. <br><br>
-                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
-                </p>
+            <div class="ocultar" id="ocultar">
+                <div class="envolver3">
+                    <div class="espacio3"></div>
+                    <div class="ocultar2" id="ocultar2">
+                        <div class="dropdownConsultaUsuarioOfertas">
+                            <h5><strong>Ofertas Asociadas</strong></h4>
+                                <button type="button" class="dropbtnConsultaUsuarioOferta"
+                                    id="dropdownConsultaUsuarioOfertas-button">Seleccione
+                                    un
+                                    usuario
+                                </button>
+                                <div class="dropdownConsultaUsuarioOfertas-content">
+                                    <a class="opcionConsultaUsuario" href="#">Oferta 1</a>
+                                    <a class="opcionConsultaUsuario" href="#">Oferta 2</a>
+                                    <a class="opcionConsultaUsuario" href="#">Oferta 3</a>
+                                    <a class="opcionConsultaUsuario" href="#">Oferta 4</a>
+                                    <a class="opcionConsultaUsuario" href="#">Oferta 5</a>
+                                    <a class="opcionConsultaUsuario" href="#">Oferta 6</a>
+                                </div>
+                        </div>
+                        <div class="espacio"></div>
+                        <div class="dropdownConsultaUsuarioOfertas">
+                            <h5><strong>Postulaciones Asociadas</strong></h4>
+                                <button type="button" class="dropbtnConsultaUsuarioOferta"
+                                    id="dropdownConsultaUsuarioOfertas-button">Seleccione
+                                    un
+                                    usuario
+                                </button>
+                                <div class="dropdownConsultaUsuarioOfertas-content">
+                                    <a class="opcionConsultaUsuario" href="#">Postulacion 1</a>
+                                    <a class="opcionConsultaUsuario" href="#">Postulacion 2</a>
+                                    <a class="opcionConsultaUsuario" href="#">Postulacion 3</a>
+                                    <a class="opcionConsultaUsuario" href="#">Postulacion 4</a>
+                                    <a class="opcionConsultaUsuario" href="#">Postulacion 5</a>
+                                    <a class="opcionConsultaUsuario" href="#">Postulacion 6</a>
+                                </div>
+                        </div>
+                        <div class="espacio"></div>
+                        <div class="dropdownConsultaUsuarioOfertas">
+                            <h5><strong>Paquetes Asociados</strong></h4>
+                                <button type="button" class="dropbtnConsultaUsuarioOferta"
+                                    id="dropdownConsultaUsuarioOfertas-button">Seleccione
+                                    un
+                                    usuario
+                                </button>
+                                <div class="dropdownConsultaUsuarioOfertas-content">
+                                    <a class="opcionConsulta" href="#">Bronce</a>
+                                    <a class="opcionConsulta" href="#">Plata</a>
+                                    <a class="opcionConsulta" href="#">Oro</a>
+                                    <a class="opcionConsulta" href="#">Platino</a>
+                                    <a class="opcionConsulta" href="#">Diamante</a>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="espacio"></div>
+                    <section class="ofertasYPaquetes">
+
+                    </section>
+                </div>
             </div>
         </section>
+
     </main>
 
     <footer>
@@ -149,7 +213,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
         </script>
-    <script src="../paginaWeb/js/dejarOpcionMarcada.js"></script>
+    <script src="/recourse/js/dejarOpcionMarcada.js"></script>
+    <script src="../js/consultaUsuario/aparecerLuegoClickConsultaUsuario.js"></script>
+    <script src="../js/consultaUsuario/seleccionConsultaTipoDePaquete.js"></script>
+
 </body>
 
 </html>
