--- a/Tarea2/Servidor-Web/src/main/webapp/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/index.html
@@ -292,7 +292,7 @@
             </div>
           </section>
         </div>
-        <div class="col-8 overflow-scroll">
+        <div class="col-8">
           <section>
             <div class="card">
               <div class="row g-0">
@@ -307,13 +307,15 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-header">Desarrollador Frontend</h5>
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      Desarrollador Frontend
+                    </h5>
                     <p class="card-text">
                       Únete a nuestro equipo de desarrollo frontend y crea
                       experiencias de usuario excepcionales.
                     </p>
                   </div>
-                  <div class="card-footer text-end">
+                  <div class="card-footer border-0 bg-white text-end">
                     <a
                       href="./recourse/menu/consultaOfertaLaboral.html"
                       class="btn btn-primary"
@@ -336,13 +338,15 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-header">A. de Marketing Digital</h5>
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      A. de Marketing Digital
+                    </h5>
                     <p class="card-text">
                       Únete a nuestro equipo de marketing y trabaja en
                       estrategias digitales innovadoras.
                     </p>
                   </div>
-                  <div class="card-footer text-end">
+                  <div class="card-footer border-0 bg-white text-end">
                     <a
                       href="./recourse/menu/consultaOfertaLaboral.html"
                       class="btn btn-primary"
@@ -365,13 +369,15 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-header">Estratega de Negocios</h5>
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      Estratega de Negocios
+                    </h5>
                     <p class="card-text">
                       Forma parte de nuestro equipo de estrategia y contribuye
                       al crecimiento de las empresas clientes.
                     </p>
                   </div>
-                  <div class="card-footer text-end">
+                  <div class="card-footer border-0 bg-white text-end">
                     <a
                       href="./recourse/menu/consultaOfertaLaboral.html"
                       class="btn btn-primary"
@@ -394,13 +400,15 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-header">Analista de Datos</h5>
+                    <h5 class="card-header p-0 border-0 bg-white text-start">
+                      Analista de Datos
+                    </h5>
                     <p class="card-text">
                       Ayuda a nuestros clientes a tomar decisiones informadas
                       basadas en analisis y visualizaciones de datos.
                     </p>
                   </div>
-                  <div class="card-footer text-end">
+                  <div class="card-footer border-0 bg-white text-end">
                     <a
                       href="./recourse/menu/consultaOfertaLaboral.html"
                       class="btn btn-primary"
