--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
@@ -18,7 +18,7 @@
     <title>Trabajo.uy</title>
   </head>
 
-  <body class="min-vw-100 min-vh-100">
+  <body class="min-vh-100 d-flex flex-column">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
@@ -67,11 +67,16 @@
         </div>
       </div>
     </nav>
-    <main class="container">
-      <form id="formAltaOferta">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="col-md-8 camposForm">
+    <main
+      class="d-flex flex-column justify-content-center align-items-center flex-grow-1"
+    >
+      <form
+        id="formAltaOferta"
+        class="bg-white rounded container py-3 mx-3 shadow-sm"
+      >
+        <div class="row g-5 mx-2">
+          <div class="col-6">
+            <div class="camposForm">
               <label for="seleccionTipoPublicacion" class="form-label"
                 >*Seleccione un Tipo de Publicación:</label
               >
@@ -89,7 +94,7 @@
               </select>
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm">
               <label for="inputNombreOferta" class="form-label">*Nombre</label>
               <input
                 type="text"
@@ -100,7 +105,7 @@
               />
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm">
               <div class="form-group">
                 <label for="textAreaDescripcion">*Descripción</label>
                 <textarea
@@ -111,7 +116,7 @@
               </div>
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm">
               <label for="selecKeyword" class="form-label"
                 >Seleccione las keywords:</label
               >
@@ -130,22 +135,22 @@
             </div>
           </div>
 
-          <div class="col-md-6">
-            <div class="col-md-8 camposForm">
+          <div class="col-6">
+            <div class="camposForm">
               <div class="cs-form">
                 <label for="horaInicio">*Hora de inicio</label>
                 <input type="time" class="form-control" id="horaInicio" />
               </div>
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm">
               <div class="cs-form">
                 <label for="horaFin">*Hora de fin</label>
                 <input type="time" class="form-control" id="horaFin" />
               </div>
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm">
               <label for="inputRemuneracion" class="form-label"
                 >*Remuneración</label
               >
@@ -159,7 +164,7 @@
               />
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm">
               <label for="departamentos">*Selecciona un departamento:</label>
               <select class="form-control" id="departamentos" required>
                 <option value="">-- Selecciona un departamento --</option>
@@ -185,7 +190,7 @@
               </select>
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm">
               <label for="inputCiudad" class="form-label">*Ciudad</label>
               <input
                 type="text"
@@ -196,7 +201,7 @@
               />
             </div>
 
-            <div class="col-md-8 camposForm">
+            <div class="camposForm pt-2">
               <label for="imagenOferta" class="form-label">Imagen</label>
               <input type="file" name="imagenOferta" />
             </div>
@@ -231,7 +236,7 @@
               </div>
             </div>
 
-            <div class="col-md-8 camposForm" id="divSeleccionPaquete">
+            <div class="camposForm" id="divSeleccionPaquete">
               <label for="listPaquetes">*Selecciona un paquete:</label>
               <select class="form-control" id="listPaquetes" required>
                 <option value="">-- Selecciona un paquete --</option>
